# autocorrection

./: .env.example  .gitignore  README.md  build_exe.py  docker-compose.yml  pyproject.toml
.kiro/specs/cross-platform-hotkey-fix/: .config.kiro  bugfix.md  design.md  tasks.md
_bmad/: config.toml  config.user.toml
_bmad/_config/: files-manifest.csv  manifest.yaml  skill-manifest.csv
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
app/: __init__.py  __main__.py  history.py  history_window.py  main.py  review_window.py  settings_window.py  text_capture.py  theme.py
certs/: README.md  ca-certificates.crt
config/: settings.yaml  style_rules.yaml
services/: ollama-entrypoint.sh
services/api-gateway/: Dockerfile  pyproject.toml
services/api-gateway/src/: __init__.py  main.py
services/api-gateway/src/api_gateway/: __init__.py  main.py
services/correction-engine/: Dockerfile  pyproject.toml
services/correction-engine/src/: __init__.py  batch_processor.py  config_manager.py  correction_engine.py  database.py  dictionary_manager.py  export_manager.py  language_detector.py  main.py  models.py  plugin_registry.py  schemas.py  style_guide.py  text_segmenter.py
tests/: test_history.py  test_text_capture.py
