[project]
name = "local-autocorrection-tool"
version = "0.1.0"
description = "Privacy-first, containerized text correction system using local LLM"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.5.0",
    "langdetect>=1.0.9",
    "pyyaml>=6.0.1",
    "striprtf>=0.0.26",
]

[project.optional-dependencies]
app = [
    "pystray>=0.19.0",
    "pynput>=1.7.0",
    "pyperclip>=1.8.0",
    "Pillow>=10.0.0",
    "plyer>=2.1.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.92.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "services*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
